--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -1,9 +1,6 @@
 /* add css module styles here (optional) */
+.container {
+}
 
-.test {
-  margin: 2em;
-  padding: 0.5em;
-  border: 2px solid #000;
-  font-size: 2em;
-  text-align: center;
+.view_board {
 }
