--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -1,6 +1,26 @@
 /* add css module styles here (optional) */
 .container {
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  height: 100%;
+  width: 100%;
+  background-color: transparent;
 }
 
-.view_board {
+.canvas_wrapper {
+  /* margin-right 在子元素能放进父元素的情况下会不生效 */
+  /*
+        方法一：
+            需要将子元素div更新为absolute才生效。position: absolute;
+            但是div会有一定概率脱离文档流，同时scale的时候有问题。
+        方法二：
+            使用white-space： nowrap; display: inline-block;
+            保证margin\padding right显示。
+        方法三：
+            使用flex居中，不使用padding方案。
+    */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
