--- a/src/component/layout/styles.module.css
+++ b/src/component/layout/styles.module.css
@@ -1,16 +1,16 @@
 /* add css module styles here (optional) */
 .container {
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
-  height: 100%;
-  width: 100%;
-  background-color: transparent;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    height: 100%;
+    width: 100%;
+    background-color: #f2f2f7;
 }
 
 .canvas_wrapper {
-  /* margin-right 在子元素能放进父元素的情况下会不生效 */
-  /*
+    /* margin-right 在子元素能放进父元素的情况下会不生效 */
+    /*
         方法一：
             需要将子元素div更新为absolute才生效。position: absolute;
             但是div会有一定概率脱离文档流，同时scale的时候有问题。
@@ -20,7 +20,7 @@
         方法三：
             使用flex居中，不使用padding方案。
     */
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
