--- a/src/component/layout/styles.module.css
+++ b/src/component/layout/styles.module.css
@@ -1,10 +1,9 @@
 /* add css module styles here (optional) */
 .container {
     display: flex;
+    flex: 1;
     flex-direction: column;
     overflow: hidden;
-    height: 100%;
-    width: 100%;
     background-color: #f2f2f7;
 }
 
