--- a/src/component/layout/styles.module.css
+++ b/src/component/layout/styles.module.css
@@ -2,6 +2,8 @@
 .container {
     display: flex;
     flex: 1;
+    width: 100%;
+    height: 100%;
     flex-direction: column;
     overflow: hidden;
     background-color: #f2f2f7;
