--- a/src/component/canvas/styles.module.css
+++ b/src/component/canvas/styles.module.css
@@ -57,5 +57,5 @@
     background-color: #d9d9d9;
     position: absolute;
     will-change: transform;
-    transition: all 0.1s linear;
+    /* transition: all 0.1s linear; */
 }
