--- a/src/component/canvas/styles.module.css
+++ b/src/component/canvas/styles.module.css
@@ -1,7 +1,7 @@
 @value colors: "../../style/theme.css";
 @value light_theme, black_theme, light_theme_border, dark_theme_border from colors;
-@value transition_time: none;
-/* @value transition_time: all 0.01s linear; */
+/* @value transition_time: none; */
+@value transition_time: all 0.01s linear;
 
 .canvas {
     position: absolute;
@@ -57,5 +57,5 @@
     background-color: #d9d9d9;
     position: absolute;
     will-change: transform;
-    /* transition: all 0.1s linear; */
+    transition: all 0.1s linear;
 }
