--- a/src/component/layout/styles.module.css
+++ b/src/component/layout/styles.module.css
@@ -9,19 +9,14 @@
     background-color: #f2f2f7;
 }
 
-/* .canvas_wrapper { */
-/* margin-right 在子元素能放进父元素的情况下会不生效 */
-/*
-        方法一：
-            需要将子元素div更新为absolute才生效。position: absolute;
-            但是div会有一定概率脱离文档流，同时scale的时候有问题。
-        方法二：
-            使用white-space： nowrap; display: inline-block;
-            保证margin\padding right显示。
-        方法三：
-            使用flex居中，不使用padding方案。
-    */
-/* display: flex;
-    justify-content: center;
-    align-items: center; */
-/* flex 布局不能处理元素位于画板外的情况，画布改成绝对定位 */
+.canvas {
+    position: absolute;
+    background-color: #fff;
+}
+
+.placeholder {
+    background-color: #d9d9d9;
+    position: absolute;
+    will-change: transform;
+    transition: transition_time;
+}
