--- a/src/component/layout/styles.module.css
+++ b/src/component/layout/styles.module.css
@@ -21,3 +21,11 @@
     will-change: transform;
     transition: transition_time;
 }
+
+.abundant {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
