--- a/packages/react-layout/src/component/layout/canvas/styles.module.css
+++ b/packages/react-layout/src/component/layout/canvas/styles.module.css
@@ -14,26 +14,14 @@
     transition: transition_time;
 }
 
-.dark-theme {
-    background-color: black_theme;
-    color: #fff;
-}
-
-.light-theme {
-    background-color: light_theme;
-    color: #fff;
-}
-
-.light-theme-border {
-    border: 1px dashed light_theme_border !important;
-}
-
-.dark-theme-border {
-    border: 1px dashed dark_theme_border !important;
+.invert-border {
+    background-color: #ddd;
+    mix-blend-mode: difference;
+    filter: invert(0.2);
 }
 
 .no-border {
-    border: 1px solid transparent;
+    border: 1px solid transparent !important;
 }
 
 .resize-handler {
