--- a/packages/react-layout/src/component/layout/canvas/styles.module.css
+++ b/packages/react-layout/src/component/layout/canvas/styles.module.css
@@ -15,7 +15,7 @@
 }
 
 .invert-border {
-    background-color: #ddd;
+    background-color: #fff;
     mix-blend-mode: difference;
     filter: invert(0);
 }
