--- a/packages/react-layout/src/component/layout/canvas/styles.module.css
+++ b/packages/react-layout/src/component/layout/canvas/styles.module.css
@@ -10,7 +10,7 @@
 }
 
 .layout_item:hover {
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px !important;
     transition: transition_time;
 }
 
