--- a/src/index.css
+++ b/src/index.css
@@ -159,7 +159,7 @@ a {
     height: 100%;
 }
 
-/* ::-webkit-scrollbar {
+::-webkit-scrollbar {
     width: 8px;
     height: 8px;
 }
@@ -193,4 +193,4 @@ a {
     width: 50px;
     -webkit-border-radius: 3px;
     background-color: #ccc;
-} */
+}
