--- a/packages/react-layout/src/component/layout/canvas/styles.module.css
+++ b/packages/react-layout/src/component/layout/canvas/styles.module.css
@@ -24,3 +24,10 @@
     border-radius: 3px;
     display: block !important;
 }
+
+.draggable_handler {
+    border: none;
+    position: absolute;
+    cursor: grab;
+    pointer-events: all
+}
