--- a/packages/react-layout/src/component/canvas/styles.module.css
+++ b/packages/react-layout/src/component/canvas/styles.module.css
@@ -9,10 +9,10 @@
     overflow: hidden;
 }
 
-.layout_item:hover {
+/* .layout_item:hover {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px !important;
     transition: transition_time;
-}
+} */
 
 .checked-border {
     /* border: 0px solid transparent !important; */
