--- a/packages/react-layout/src/component/layout/styles.module.css
+++ b/packages/react-layout/src/component/layout/styles.module.css
@@ -12,10 +12,15 @@
 .canvas {
     position: absolute;
     background-color: transparent;
+    transition: height 200ms ease;
 }
 
 .placeholder {
     background-color: #d9d9d9;
     position: absolute;
     will-change: transform;
+}
+
+.canvas_wrapper {
+    transition: height 200ms ease;
 }
