--- a/packages/react-layout/src/component/canvas/styles.module.css
+++ b/packages/react-layout/src/component/canvas/styles.module.css
@@ -11,6 +11,10 @@
     transition-property: transform;
 }
 
+.iframe_mask iframe {
+    pointer-events: none;
+}
+
 /* .layout_item:hover {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px !important;
     transition: transition_time;
