--- a/packages/react-layout/src/component/canvas/styles.module.css
+++ b/packages/react-layout/src/component/canvas/styles.module.css
@@ -45,5 +45,6 @@
     border: none;
     position: absolute;
     cursor: grab;
-    pointer-events: all
+    pointer-events: all;
+    z-index: 1000
 }
